Added a notebook to test validity of reading and writing SharePoint List.

--- a/WebApp_ChatBot/ai4km.yaml
+++ b/WebApp_ChatBot/ai4km.yaml
@@ -26,6 +26,7 @@ dependencies:
       - requests
       - python-dotenv
       - pydantic
+      - cryptography
       # Optional if you later want API endpoints
       - fastapi
       - uvicorn
