Added details on SharePoint connection to ./WebApp_ChatBot/README.md. Secrets removed from README.md

--- a/WebApp_ChatBot/.env.example
+++ b/WebApp_ChatBot/.env.example
@@ -8,11 +8,23 @@ OPENAI_API_KEY=sk-REPLACE_ME
 VECTOR_DB_PATH=.chroma
 
 # Toggle SharePoint integration
-SHAREPOINT_ENABLED=false
+SHAREPOINT_ENABLED=true
 
 # ----- Only needed if SHAREPOINT_ENABLED=true -----
+# --- The instructions on how to get all 8 SharePoint-related env variables below would be elaborated in Section 5 `SharePoint App Permissions` ---
+
+# Tenant
 SP_TENANT=yourtenant.onmicrosoft.com
+SP_TENANT_ID=REPLACE_ME
+
+# Target site & list
 SP_SITE_URL=https://yourtenant.sharepoint.com/sites/ai4km
 SP_LIST_NAME=AI4KM Knowledge Assets
-SP_CLIENT_ID=GUID-REPLACE-ME
+
+#App credentials
+SP_CLIENT_ID=REPLACE_ME
 SP_CLIENT_SECRET=REPLACE_ME
+
+#App certificates (P.S. SP_CERT_PEM_PATH below is fixed)
+SP_CERT_THUMBPRINT=REPLACE_ME
+SP_CERT_PEM_PATH=./sharepoint_certificates/privkey.pem
