Added capability of attaching pptx

--- a/WebApp_ChatBot/ai4km.yaml
+++ b/WebApp_ChatBot/ai4km.yaml
@@ -27,6 +27,7 @@ dependencies:
       - python-dotenv
       - pydantic
       - cryptography
+      - python-pptx
       # Optional if you later want API endpoints
       - fastapi
       - uvicorn
